@@ -19,6 +19,7 @@ Bugfixes:
 - mp3 files with unsupported sample rates are detected (Trac #66)
 - timestamps of recorded .flv files were wrong sometimes (Trac #78)
 - stream types could be reused leading to a ClassCastException (Trac #84)
+- "ns.pause" working without if no flag given (Trac #67)
 
 
 Red5 0.5rc1 (2006-07-11)
